--- a/.config
+++ b/.config
@@ -424,7 +424,6 @@ CONFIG_TARGET_INIT_CMD="/sbin/init"
 CONFIG_TARGET_INIT_SUPPRESS_STDERR=y
 # CONFIG_VERSIONOPT is not set
 CONFIG_PER_FEED_REPO=y
-CONFIG_FEED_Nmon=y
 CONFIG_FEED_lienol=y
 CONFIG_FEED_xiaorouji=y
 CONFIG_FEED_packages=y
@@ -6715,7 +6714,7 @@ CONFIG_PACKAGE_unzip=y
 # CONFIG_PACKAGE_joe is not set
 # CONFIG_PACKAGE_jupp is not set
 # CONFIG_PACKAGE_mg is not set
-# CONFIG_PACKAGE_nano is not set
+CONFIG_PACKAGE_nano=y
 # CONFIG_PACKAGE_vim is not set
 # CONFIG_PACKAGE_vim-full is not set
 # CONFIG_PACKAGE_vim-fuller is not set
@@ -6849,7 +6848,7 @@ CONFIG_PACKAGE_ngrok=y
 # CONFIG_PACKAGE_rtty-nossl is not set
 # CONFIG_PACKAGE_rtty-openssl is not set
 # CONFIG_PACKAGE_rtty-wolfssl is not set
-# CONFIG_PACKAGE_screen is not set
+CONFIG_PACKAGE_screen=y
 # CONFIG_PACKAGE_script-utils is not set
 # CONFIG_PACKAGE_serialconsole is not set
 # CONFIG_PACKAGE_setterm is not set
@@ -6901,7 +6900,7 @@ CONFIG_PACKAGE_ngrok=y
 # CONFIG_PACKAGE_irecovery is not set
 # end of libimobiledevice
 
-CONFIG_PACKAGE_Nmon=y
+# CONFIG_PACKAGE_Nmon is not set
 # CONFIG_PACKAGE_acpid is not set
 # CONFIG_PACKAGE_adb is not set
 # CONFIG_PACKAGE_ap51-flash is not set
